doc: Add Comments & Vote ressources
