# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\V1\Authentication\AuthController;
 use App\Http\Controllers\Api\V1\Reports\ReportController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -16,12 +17,18 @@ use Illuminate\Support\Facades\Route;
 */
 
 Route::prefix('v1')->group(function () {
-    Route::namespace('Api\V1\Reports')->group(function () {
+    Route::middleware('auth:sanctum')->namespace('Api\V1\Reports')->group(function () {
         Route::get('/reports', [ReportController::class, 'index']);
         Route::post('/reports', [ReportController::class, 'store']);
         Route::get('/reports/{id}', [ReportController::class, 'show']);
         Route::put('/reports/{id}', [ReportController::class, 'update']);
         Route::delete('/reports/{id}', [ReportController::class, 'destroy']);
+    });
+
+    Route::namespace('Api\V1\Authentication')->group(function () {
+        Route::post('/login', [AuthController::class, 'login']);
+        Route::post('/register', [AuthController::class, 'register']);
+        Route::post('/logout', [AuthController::class, 'logout']);
     });
 });
 
